# abc-python

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
app/: main.py
tests/: test_main.py
