[tool.poetry]
name = "abc-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = false  # двойные кавычки
line-length = 120

[tool.isort]
case_sensitive = true
force_single_line = true
remove_redundant_aliases = true
line_length = 120


[tool.pylint."MESSAGES CONTROL"]
disable = ["C0114", "C0116"]
ignore = "tests"
